[package]
name = "rust_proj"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.28.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
eframe = "0.31.1"
egui = "0.31.1"
tinyfiledialogs = "3.9.1"
walkdir = "2"
chrono = "0.4"
